fixed wrap behavior

--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 body {
    display: flex;
+   flex-direction: row;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-   margin: auto;
-   width: 100vw;
    height: 100vh;
+   width: min(110rem, 100%);
    background: #081f37;
+   justify-content: start;
 }
 
 .img {
    display: flex;
-   width: 35%;
+   width: 40%;
    height: 100%;
    background: url(./images/side-img.jpg) no-repeat center;
    background-size: cover;
@@ -30,17 +31,19 @@ body {
 }
 
 .main {
-   width: 65%;
-   padding: 32px;
+   width: 60%;
+   height: 100vh;
+   padding: 10% 3%;
 }
 
 .welcome-text {
    color: aqua;
-   font-size: 2rem;
+   font-size: 1.5rem;
 }
 
 .form {
    width: 100%;
+   margin-top: 8%;
    display: flex;
    justify-content: space-between;
    column-gap: 32px;
@@ -48,13 +51,12 @@ body {
 }
 
 .inputs-column {
-   width: auto;
+   width: 40%;
+   min-width: 300px;
    flex-grow: 1;
 }
 
 .input-div {
-   min-width: 250px;
-   flex-grow: 1;
    margin-top: 12px;
 }
 
@@ -65,7 +67,12 @@ label {
 }
 
 input {
+   margin-top: 4px;
    border-radius: 12px;
-   width: 100%;
+   width: 95%;
    height: 48px;
+   border: aqua 3px solid;
+   background-color: #1d3752;
+   font-size: xx-large;
+   padding-left: 12px;
 }
